# Toy_Model_RL

./: .gitignore  .pdm-python  ReadME.md  dataset_100000.npz  dataset_50000.npz  environment.py  eval.py  eval_ppo.py  plot.py  ppo_network.py  pyproject.toml  train.py  train_ppo.py
.devcontainer/: Dockerfile  devcontainer.json
Custom_Architectures_(NOT_WORKING)/custom_PPO/: env_PPO.py
PT_Random_Trajectories_SP_PreyChaser/: env_PT_rand_traj.py  eval_MLP.py  generate_dataset.py  plot_trajectory.py  pretrain.py
SB3_DQN_Moving/: eval_sb3_dqn_moving.py  train_sb3_dqn_moving.py
SB3_PPO_5_obs/: env_sb3_ppo_5_obs.py  eval_sb3.py  sb3_ppo.py
SB3_PPO_8_obs/: train_ppo_8_obs.py
SB3_PPO_Bezier/: env_sb3_ppo_bezier.py  env_sb3_ppo_heatmap.py  eval_sb3_ppo_bezier.py  test_heatmap_episode.py  train_sb3_ppo_bezier.py
SB3_PPO_Moving/: env_sb3_ppo_moving.py  train_sb3_ppo_moving.py
algorithms/: simple_ppo.py
custom_DQN/: dqn_network.py  eval_dqn.py  train_dqn.py
custom_PPO/: eval_ppo.py  ppo_network.py  train_ppo.py
environments/: bezier_history.py  dogfight_env.py  fight_env.py  shootdown_env.py  tag_env.py  tag_shoot_env.py
evaluate/: evaluate_fight.py  evaluate_model.py  evaluate_sb3_sp.py  evaluate_shootdown.py  evaluate_sp.py  evaluate_tag.py  evaluate_tag_shoot.py
old_stuff/: old_environment.py  toy new good.py  toy old.py
reward_functions/: heatmap_direction_alignment.py  predictive_negative.py
train/: dogfight_sb3.py  dogfight_train.py  fight_train.py  shootdown_train.py  tag_shoot_ippo.py  tag_shoot_train.py  tag_train.py  train.py
(+47 files in other folders)
