[project]
name = "Toy_Model_RL"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "piergiuseppepezzoli", email = "pezzoli.piergiuseppe@gmail.com"},
]
dependencies = ["numpy>=2.2.4", "torch>=2.6.0", "torchvision>=0.21.0", "torchaudio>=2.6.0", "gymnasium>=1.1.1", "matplotlib>=3.10.1", "stable-baselines3>=2.6.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
